# shared-files

./: Cargo.toml  README.md  generate_config.py
.github/workflows/: rust_build.yml
src/: config.rs  lib.rs
