[package]
name = "share-files"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
lazy_static = "1.4"
toml = "0.5.8"
serde = { version = "1.0.127", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
